--- a/infra/cloud-init.yaml
+++ b/infra/cloud-init.yaml
@@ -65,7 +65,7 @@ runcmd:
 
   # I need the domain name eg http://hoverflytest427.westeurope.cloudapp.azure.com/
   - sudo chmod 777 /home/dave/source/infra/wpcoreinstall.sh
-  - /home/dave/source/infra/wpcoreinstall.sh
+  - sudo -u www-data /home/dave/source/infra/wpcoreinstall.sh
   # - sudo -u www-data wp core install --url='http://example.com' --title='Blog Title' --admin_user='dave' --admin_password='letmein' --admin_email='email@domain.com'
 
   #**TODO plugins
