--- a/infra/cloud-init.yaml
+++ b/infra/cloud-init.yaml
@@ -40,18 +40,29 @@ runcmd:
   - sudo mysql -e "GRANT ALL ON wordpress.* TO 'wp_user'@'localhost' IDENTIFIED BY 'password';"
   - sudo mysql -e "FLUSH PRIVILEGES;"
 
-  # PHP
-  - sudo apt install php libapache2-mod-php php-mysql -y
+  # PHP7.4
+  - sudo apt-get update
+  - sudo apt install software-properties-common -y
+  - sudo add-apt-repository ppa:ondrej/php -y
+  - sudo apt-get update
+
+  # PHP - this installs 7.2.24
+  #- sudo apt install php libapache2-mod-php php-mysql -y
+
+  - sudo apt install php7.4 libapache2-mod-php php-mysql -y
   - sudo apt install php-curl php-gd php-mbstring php-xml php-xmlrpc php-soap php-intl php-zip -y
+  - sudo apt install imagemagick -y
+  - sudo apt install php-imagick -y
 
   # settings needed for wp all in one website import
   # https://help.servmask.com/2018/10/27/how-to-increase-maximum-upload-file-size-in-wordpress/
   # .htaccess works, but not auto generated until after wordpress starts
   # wp-config.php putting in settings didn't work for me
   # **WILL NEED TO PATCH IN NEW VERSION WHEN NEW VERSION OF PHP**
-  - cd /etc/php/7.2/apache2
+  # - cd /etc/php/7.2/apache2
+  - cd /etc/php/7.4/apache2
   - sudo cp php.ini phpoldini.txt
-  - sudo cp /home/dave/source/infra/php.ini /etc/php/7.2/apache2/php.ini
+  - sudo cp /home/dave/source/infra/php.ini /etc/php/7.4/apache2/php.ini
 
   # delete the apache default index.html
   - sudo rm /var/www/html/index.html
@@ -89,6 +100,9 @@ runcmd:
   - sudo curl -O https://import.wp-migration.com/all-in-one-wp-migration-file-extension.zip
   - sudo -u www-data mv all-in-one-wp-migration-file-extension.zip /var/www/html
   - sudo -u www-data wp plugin install all-in-one-wp-migration-file-extension.zip --activate
+
+  # take off unused plugins
+
 
   # maybe don't need to restart?
   - sudo systemctl restart apache2
